--- a/3-model-architecture/3-attention.ipynb
+++ b/3-model-architecture/3-attention.ipynb
@@ -11,40 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ea9233d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample tokens:\n",
-      " tensor([[0.2429, 0.1176, 0.3660, 0.8112],\n",
-      "        [0.3871, 0.6056, 0.0759, 0.2050],\n",
-      "        [0.4745, 0.5922, 0.1595, 0.4395],\n",
-      "        [0.9812, 0.0948, 0.9929, 0.4543],\n",
-      "        [0.3246, 0.2551, 0.8802, 0.0150],\n",
-      "        [0.8081, 0.8946, 0.3738, 0.1147],\n",
-      "        [0.5037, 0.5514, 0.4478, 0.7581],\n",
-      "        [0.4618, 0.4430, 0.6137, 0.6494],\n",
-      "        [0.6258, 0.6795, 0.7773, 0.3714],\n",
-      "        [0.1914, 0.7553, 0.4314, 0.8364]])\n",
-      "\n",
-      "Attention output:\n",
-      " tensor([[1.2994, 0.7965, 0.8056, 0.8360],\n",
-      "        [1.2843, 0.7925, 0.8000, 0.8249],\n",
-      "        [1.2966, 0.8001, 0.8077, 0.8337],\n",
-      "        [1.3276, 0.8143, 0.8229, 0.8607],\n",
-      "        [1.3016, 0.7962, 0.8054, 0.8418],\n",
-      "        [1.3099, 0.8110, 0.8177, 0.8451],\n",
-      "        [1.3166, 0.8113, 0.8191, 0.8491],\n",
-      "        [1.3166, 0.8094, 0.8177, 0.8501],\n",
-      "        [1.3235, 0.8153, 0.8231, 0.8565],\n",
-      "        [1.3165, 0.8114, 0.8192, 0.8485]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -112,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3ef628ef",
    "metadata": {},
    "outputs": [
@@ -159,12 +129,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c93f493",
+   "metadata": {},
+   "source": [
+    "Same thing, directly implemented without nn.MultiheadAttention"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b46fc072",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random input tensor x created with shape: torch.Size([10, 32, 512])\n",
+      "MultiHeadAttention module initialized with 8 heads.\n",
+      "Input tensor shape: torch.Size([10, 32, 512]) (sequence_len, batch, embedding_dim)\n",
+      "torch.Size([10, 32, 512])\n",
+      "torch.Size([8, 10, 32, 64])\n",
+      "Attention output shape: torch.Size([10, 32, 512]) (sequence_len, batch, embedding_dim)\n",
+      "Attention weights shape: torch.Size([8, 10, 32, 32]) (batch, num_heads, sequence_len, sequence_len)\n",
+      "Final output tensor shape: torch.Size([10, 32, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Multi-Head Attention implemented from scratch\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, embed_dim, num_heads):\n",
+    "        super().__init__()\n",
+    "        self.embed_dim = embed_dim # number of numbers needed to represent one token as embeddings\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = embed_dim // num_heads\n",
+    "        \n",
+    "        assert embed_dim % num_heads == 0, \"embed_dim must be divisible by num_heads\"\n",
+    "        \n",
+    "        # Linear layers for Q, K, V projections for all heads at once\n",
+    "        self.W_q = nn.Linear(embed_dim, embed_dim)\n",
+    "        self.W_k = nn.Linear(embed_dim, embed_dim)\n",
+    "        self.W_v = nn.Linear(embed_dim, embed_dim)\n",
+    "        \n",
+    "        # Output projection\n",
+    "        self.W_o = nn.Linear(embed_dim, embed_dim)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # x shape: (sequence_len, batch, embedding_dim)\n",
+    "        seq_len, batch_size, embed_dim = x.shape\n",
+    "        print(f\"Input tensor shape: {x.shape} (sequence_len, batch, embedding_dim)\")\n",
+    "        \n",
+    "        # Generate Q, K, V for all heads\n",
+    "        Q = self.W_q(x)  # (seq_len, batch, embed_dim)\n",
+    "        K = self.W_k(x)  # (seq_len, batch, embed_dim)\n",
+    "        V = self.W_v(x)  # (seq_len, batch, embed_dim)\n",
+    "        print(Q.shape)\n",
+    "        # Reshape and transpose for multi-head attention\n",
+    "        # (seq_len, batch, embed_dim) -> (seq_len, batch, num_heads, head_dim) -> (batch, num_heads, seq_len, head_dim)\n",
+    "        # Here, each of the heads get parts of Q, K and V. So embedding_dim is divided and given to each of the head\n",
+    "        Q = Q.view(seq_len, batch_size, self.num_heads, self.head_dim).transpose(0, 2).transpose(1, 2)\n",
+    "        K = K.view(seq_len, batch_size, self.num_heads, self.head_dim).transpose(0, 2).transpose(1, 2)\n",
+    "        V = V.view(seq_len, batch_size, self.num_heads, self.head_dim).transpose(0, 2).transpose(1, 2)\n",
+    "        print(Q.shape)        \n",
+    "\n",
+    "        # Compute attention scores\n",
+    "        scores = torch.matmul(Q, K.transpose(-2, -1)) / (self.head_dim ** 0.5)\n",
+    "        \n",
+    "        # Apply softmax to get attention weights\n",
+    "        attn_weights = torch.softmax(scores, dim=-1)\n",
+    "        \n",
+    "        # Apply attention weights to values\n",
+    "        attended = torch.matmul(attn_weights, V)\n",
+    "        \n",
+    "        # Concatenate heads: (batch, num_heads, seq_len, head_dim) -> (batch, seq_len, embed_dim)\n",
+    "        attended = attended.transpose(1, 2).contiguous().view(batch_size, seq_len, embed_dim)\n",
+    "        \n",
+    "        # Apply output projection\n",
+    "        output = self.W_o(attended)\n",
+    "        \n",
+    "        # Transpose back to original format: (batch, seq_len, embed_dim) -> (seq_len, batch, embed_dim)\n",
+    "        output = output.transpose(0, 1)\n",
+    "        \n",
+    "        print(f\"Attention output shape: {output.shape} (sequence_len, batch, embedding_dim)\")\n",
+    "        print(f\"Attention weights shape: {attn_weights.shape} (batch, num_heads, sequence_len, sequence_len)\")\n",
+    "        \n",
+    "        return output\n",
+    "\n",
+    "# Example usage\n",
+    "x = torch.rand(10, 32, 512)  # 10 tokens, batch size 32, embedding dim 512\n",
+    "print(\"Random input tensor x created with shape:\", x.shape)\n",
+    "mha = MultiHeadAttention(embed_dim=512, num_heads=8)\n",
+    "print(\"MultiHeadAttention module initialized with 8 heads.\")\n",
+    "output = mha(x)\n",
+    "print(\"Final output tensor shape:\", output.shape)"
+   ]
   },
   {
    "cell_type": "code",
