--- a/3-model-architecture/1-tokenization.ipynb
+++ b/3-model-architecture/1-tokenization.ipynb
@@ -19,19 +19,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/arjun/ai_env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['the', 'cats', 'are', 'playing']\n",
-      "[101, 1996, 8870, 2024, 2652, 102]\n"
+      "['the', 'cats', 'are', 'playing', 'inside', 'the', 'super', '##du', '##per', 'house']\n",
+      "[101, 1996, 8870, 2024, 2652, 2503, 1996, 3565, 8566, 4842, 2160, 102]\n"
      ]
     }
    ],
@@ -39,12 +31,12 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\") # using bert's tokenizer\n",
-    "text = \"The cats are playing\"\n",
+    "text = \"The cats are playing inside the superduper house\"\n",
     "tokens = tokenizer.tokenize(text)\n",
     "token_ids = tokenizer.encode(text)\n",
     "\n",
-    "print(tokens)      # ['the', 'cats', 'are', 'play', '##ing']\n",
-    "print(token_ids)   # [101, 1996, 8870, 2024, 2653, 2075, 102]"
+    "print(tokens)\n",
+    "print(token_ids) "
    ]
   },
   {
