--- a/3-model-architecture/3-attention.ipynb
+++ b/3-model-architecture/3-attention.ipynb
@@ -11,10 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea9233d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample tokens:\n",
+      " tensor([[0.4049, 0.4418, 0.0380, 0.5829],\n",
+      "        [0.3825, 0.6892, 0.9744, 0.7100],\n",
+      "        [0.8483, 0.2261, 0.2593, 0.4272],\n",
+      "        [0.7662, 0.3433, 0.2613, 0.9817],\n",
+      "        [0.0059, 0.3611, 0.2559, 0.2645],\n",
+      "        [0.9035, 0.3111, 0.7183, 0.4819],\n",
+      "        [0.5543, 0.2404, 0.0581, 0.7029],\n",
+      "        [0.2210, 0.2754, 0.0144, 0.5870],\n",
+      "        [0.4300, 0.4448, 0.2364, 0.0915],\n",
+      "        [0.3387, 0.7015, 0.5927, 0.7368]])\n",
+      "\n",
+      "Attention output:\n",
+      " tensor([[0.9638, 1.2040, 1.1158, 1.1066],\n",
+      "        [1.0288, 1.3384, 1.2095, 1.1759],\n",
+      "        [1.0000, 1.2749, 1.1644, 1.1442],\n",
+      "        [1.0281, 1.3275, 1.2006, 1.1725],\n",
+      "        [0.9073, 1.1115, 1.0516, 1.0514],\n",
+      "        [1.0310, 1.3432, 1.2114, 1.1779],\n",
+      "        [0.9816, 1.2357, 1.1377, 1.1244],\n",
+      "        [0.9375, 1.1579, 1.0838, 1.0802],\n",
+      "        [0.9414, 1.1701, 1.0922, 1.0855],\n",
+      "        [1.0097, 1.2944, 1.1792, 1.1547]])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -36,11 +66,11 @@
     "\n",
     "# Compute attention scores - how much should each token attend to every other token?\n",
     "scores = Q @ K.T / (d ** 0.5)  # (10, 10), scaled dot product attention\n",
+    "\n",
     "# Apply softmax to get attention weights - normalize scores into probabilities\n",
-    "\n",
     "weights = F.softmax(scores, dim=-1)  # (10, 10)\n",
-    "# Each row sums to 1, representing attention distribution for that token\n",
     "\n",
+    "# Each row sums to 1, representing attention distribution for that token\n",
     "# Weighted sum of values - final attended representation\n",
     "attended = weights @ V  # (10, d)\n",
     "# For each token: mix all value vectors weighted by attention scores\n",
