--- a/3-model-architecture/4-multi-head-attention.ipynb
+++ b/3-model-architecture/4-multi-head-attention.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "db687072",
    "metadata": {},
    "outputs": [
@@ -49,13 +49,13 @@
     "    def __init__(self, embed_dim, num_heads):\n",
     "        super().__init__()\n",
     "        # Initialize PyTorch's built-in MultiheadAttention layer\n",
-    "        self.attention = nn.MultiheadAttention(embed_dim, num_heads)\n",
+    "        self.multi_head_attention = nn.MultiheadAttention(embed_dim, num_heads)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        # x shape: (sequence_len, batch, embedding_dim)\n",
     "        print(f\"Input tensor shape: {x.shape} (sequence_len, batch, embedding_dim)\")\n",
     "        # Self-attention: query, key, value are all x\n",
-    "        attn_output, attn_weights = self.attention(x, x, x)\n",
+    "        attn_output, attn_weights = self.multi_head_attention(x, x, x)\n",
     "        print(f\"Attention output shape: {attn_output.shape} (sequence_len, batch, embedding_dim)\")\n",
     "        print(f\"Attention weights shape: {attn_weights.shape} (batch, sequence_len, sequence_len)\")\n",
     "        return attn_output\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "18e58f24",
    "metadata": {},
    "outputs": [
@@ -172,8 +172,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ai_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
